--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+inotify = "0.10.1"
 
 [features]
 default = ["error"]
