--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -10,6 +10,10 @@ inotify = "0.10.1"
 walkdir = "2.3.3"
 regex = "1.8.4"
 fast_rsync = "0.2.0"
+protobuf = "3.2.0"
+
+[build-dependencies]
+protobuf-codegen = "3.2.0"
 
 [features]
 default = ["error"]
