--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -11,6 +11,8 @@ walkdir = "2.3.3"
 regex = "1.8.4"
 fast_rsync = "0.2.0"
 protobuf = "3.2.0"
+futures = "0.3.28"
+tokio = { version = "1.29.0", features = ["full"] }
 
 [build-dependencies]
 protobuf-codegen = "3.2.0"
