--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -13,9 +13,11 @@ fast_rsync = "0.2.0"
 protobuf = "3.2.0"
 futures = "0.3.28"
 tokio = { version = "1.29.0", features = ["full"] }
+tonic = "0.9.2"
 
 [build-dependencies]
 protobuf-codegen = "3.2.0"
+tonic-build = "0.9.2"
 
 [features]
 default = ["error"]
