--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -14,6 +14,7 @@ protobuf = "3.2.0"
 futures = "0.3.28"
 tokio = { version = "1.29.0", features = ["full"] }
 tonic = "0.9.2"
+prost = "0.11.9"
 
 [build-dependencies]
 protobuf-codegen = "3.2.0"
