--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.29.0", features = ["full"] }
 tonic = "0.9.2"
 prost = "0.11.9"
 rand = "0.8.5"
+async-recursion = "1.0.4"
 
 [build-dependencies]
 tonic-build = "0.9.2"
