--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -16,6 +16,7 @@ tonic = "0.9.2"
 prost = "0.11.9"
 rand = "0.8.5"
 async-recursion = "1.0.4"
+lazy_static = "1.4.0"
 
 [build-dependencies]
 tonic-build = "0.9.2"
