--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -17,6 +17,7 @@ prost = "0.11.9"
 rand = "0.8.5"
 async-recursion = "1.0.4"
 lazy_static = "1.4.0"
+rustyline = "12.0.0"
 
 [build-dependencies]
 tonic-build = "0.9.2"
