--- a/tra/Cargo.toml
+++ b/tra/Cargo.toml
@@ -18,6 +18,8 @@ rand = "0.8.5"
 async-recursion = "1.0.4"
 lazy_static = "1.4.0"
 rustyline = "12.0.0"
+diff = "0.1.13"
+dialoguer = "0.10.4"
 
 [build-dependencies]
 tonic-build = "0.9.2"
